--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </article>
 
     <footer>
-      <p>Desenvolvido para praticar JavaScript | Bons estudos!</p>
+      <p>Desenvolvido para praticar JavaScript </p>
     </footer>
   </main>
 
